--- a/VanillaJS_Chromeapp/practice/practice.html
+++ b/VanillaJS_Chromeapp/practice/practice.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="pracitce.css" rel = "stylesheet" type="text/css" />
+    <link href="practice.css" rel = "stylesheet" type="text/css" />
 </head>
 <body>
-    <script src = "practice.js"></script>
+    	<h1 id = "title">This is worked! </h1>
+	<script src = "practice.js"></script>
 </body>
 </html>
