--- a/VanillaJS_Chromeapp/practice/practice.html
+++ b/VanillaJS_Chromeapp/practice/practice.html
@@ -7,7 +7,7 @@
     <link href="practice.css" rel = "stylesheet" type="text/css" />
 </head>
 <body>
-    	<h1 id = "title">This is worked! </h1>
+    	<h1 id = "title" class = "btn">This is worked! </h1>
 	<script src = "practice.js"></script>
 </body>
 </html>
